--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -1,1 +1,13 @@
 @import "bootstrap";
+
+
+
+/* miscellaneous */
+
+.debug_dump {
+  clear: both;
+  float: left;
+  margin-top: 45px;
+  border: 1px solid rgba(172,172,172,1);
+  background-color: #eaeaea;
+}
