--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -25,7 +25,7 @@
 
   <div class="field">
     <%= f.label :city %><br />
-    <%= f.text_field :email, autofocus: true, autocomplete: "Rennes" %>
+    <%= f.text_field :city, autofocus: true, autocomplete: "Rennes" %>
   </div>
 
   <div class="field">
