--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -7,6 +7,7 @@
 .debug_dump {
   clear: both;
   float: left;
+  width: 100%;
   margin-top: 45px;
   border: 1px solid rgba(172,172,172,1);
   background-color: #eaeaea;
