--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -36,6 +36,21 @@
   </div>
 <% end %>
 
+<%= form_for(@user) do |form| %>
+<div>
+    <div>
+        <h3>Modifier la photo de profil</h3>
+    </div>
+    <div>
+        <label>Nouvelle image</label>
+        <%= form.file_field :avatar %>
+        <div>
+          <%= form.submit "Confirmation"%>
+        </div>
+    </div>
+</div>
+<% end %>
+
 <h3>Cancel my account</h3>
 
 <p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
