[Sign_up] Correction of typing errors

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -92,7 +92,7 @@
                 </div>
                 <div class="row">
                   <div class="col-12">
-                    <div class="form-group has-feedback"">
+                    <div class="form-group has-feedback">
                       <label>Confirmation du mot de passe</label><br>
                       <%= f.password_field :password_confirmation, autocomplete: "new-password", :class =>"form-control form-control-lg" %>
                     </div>
