--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,8 +12,9 @@
   </head>
 
   <body>
-    <%= yield %>
-
-    <%= debug(params) if Rails.env.development? %>
+    <%= render 'layouts/header'%>
+    <%= yield %>   
+    <%= render 'layouts/footer'%>
+    
   </body>
 </html>
