--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,8 +13,10 @@
 
   <body>
     <%= render 'layouts/header'%>
-    <%= yield %>   
+    <%= yield %> 
+    <%= debug(params) if Rails.env.development? %>  
+    <%= debug session.to_hash if Rails.env.development?%>
     <%= render 'layouts/footer'%>
-    
+   
   </body>
 </html>
