modif page edit

--- a/app/views/users/registrations/edit.html.erb
+++ b/app/views/users/registrations/edit.html.erb
@@ -1,5 +1,7 @@
 <section class="slice sct-color-1">
 <div class="col-lg-8">
+  <div class="row justify-content-center">
+
   <div class="container">
 <!-- Page title -->
     <div class="page-title">
@@ -152,5 +154,6 @@
         <%= link_to "Back", :back %>
       </div>
     </div>
+  </div>
   </div>
 </section>
