--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,2 +1,121 @@
-<h1>StaticPages#about</h1>
-<p>Find me in app/views/static_pages/about.html.erb</p>
+<section class="slice sct-color-1">
+	<div class="container">
+    <div class="row justify-content-center">
+      <div class="col-md-8">
+        <div class="text-center">
+          <div class="heading heading-2 strong-600 line-height-1_8">Know us better
+          </div>
+          <span class="clearfix"></span>
+        	<div class="fluid-paragraph fluid-paragraph-sm">
+            <p>Lorem ipsum dolor sit amet consectetur adipiscing elit curabitur pellentesque neque eget diam posuere porta.</p>
+          </div>
+          <span class="space-xs-md"></span>
+          <a href="#" class="btn btn-styled btn-base-1 btn-circle" data-scroll-to="#sct_timeline">See our history</a>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+<section class="sct-color-1" id="sct_timeline">
+	<div class="container">
+  	<div class="timeline">
+    	<div class="timeline-block">
+      	<span class="timeline-img"></span>
+      	<div class="timeline-content">
+        	<div class="">
+        		<img src="../../assets/images/prv/work/movie/img-4.jpg" class="img-fluid">
+        		<div class="timeline-body">
+    		    	<span class="heading heading-xs text-uppercase strong-300">Oct 15, 2018</span>
+      	      <a href="#" class="heading heading-4 d-block strong-500 mt-1">Beware the mountain</a>
+      	      <p class="mt-3">When we strive to become better than we are, everything around us becomes better, too.</p>
+         		</div>
+        	</div>
+      	</div>
+    	</div>
+			<div class="timeline-block">
+				<span class="timeline-img"></span>
+			  <div class="timeline-content">
+			    <div class="">
+			      <img src="../../assets/images/prv/work/movie/img-1.jpg" class="img-fluid">
+			      <div class="timeline-body">
+		          <span class="heading heading-xs text-uppercase strong-300">Oct 15, 2018</span>
+		          <a href="#" class="heading heading-4 d-block strong-500 mt-1">Beware the mountain</a>
+		          <p class="mt-3">When we strive to become better than we are, everything around us becomes better, too.</p>
+		        </div>
+	        </div>
+			  </div>
+			</div>
+			<div class="timeline-block">
+			  <span class="timeline-img"></span>
+			  <div class="timeline-content border-0">
+			    <div class="card bg-dark text-white">
+				    <img class="card-img" src="../../assets/images/prv/work/movie/img-2.jpg" alt="Card image">
+				    <span class="mask mask-dark--style-2"></span>
+				    <div class="card-img-overlay d-flex align-items-center">
+				      <div class="col">
+				        <h4 class="heading heading-inverse heading-3 strong-600">Card title</h4>
+				        <p class="card-text c-gray-lighter">This is a wider card with supporting text below...</p>
+				        <p class="card-text c-gray-lighter">Last updated 3 mins ago</p>
+				      </div>
+				    </div>
+					</div>
+			  </div>
+			</div>
+			<div class="timeline-block">
+			  <span class="timeline-img"></span>
+			  <div class="timeline-content">
+			    <div class="timeline-body">
+	          <span class="heading heading-xs text-uppercase strong-300">Oct 15, 2018</span>
+	          <a href="#" class="heading heading-4 d-block strong-500 mt-1">Beware the mountain</a>
+	          <p class="mt-3">When we strive to become better than we are, everything around us becomes better, too.</p>
+	        </div>
+			  </div>
+			</div>
+			<div class="timeline-block">
+			  <span class="timeline-img"></span>
+			  <div class="timeline-content">
+			    <div class="">
+			      <img src="../../assets/images/prv/work/movie/img-3.jpg" class="img-fluid">
+			      <div class="timeline-body">
+		          <span class="heading heading-xs text-uppercase strong-300">Oct 15, 2018</span>
+		          <a href="#" class="heading heading-4 d-block strong-500 mt-1">Beware the mountain</a>
+		          <p class="mt-3">When we strive to become better than we are, everything around us becomes better, too.</p>
+		        </div>
+	        </div>
+			  </div>
+			</div>
+	    <div class="timeline-block">
+	      <span class="timeline-img"></span>
+	      <div class="timeline-content border-0">
+	        <div class="card bg-dark text-white">
+				    <img class="card-img" src="../../assets/images/prv/work/movie/img-4.jpg" alt="Card image">
+					  <span class="mask mask-dark--style-2"></span>
+					  <div class="card-img-overlay d-flex align-items-center">
+					    <div class="col">
+					      <h4 class="heading heading-inverse heading-3 strong-600">Card title</h4>
+					      <p class="card-text c-gray-lighter">This is a wider card with supporting text below...</p>
+					      <p class="card-text c-gray-lighter">Last updated 3 mins ago</p>
+				      </div>
+				    </div>
+					</div>
+	      </div>
+	    </div>
+	  </div>
+  </div>
+</section>
+<section class="slice-lg sct-color-1">
+	<div class="container text-center">
+	  <div class="row">
+	    <div class="col-md-12">
+	      <div class="section-title section-title--style-1 text-center mb-4">
+	        <h3 class="section-title-inner heading-2 text-normal">The time for action is now!</h3>
+	        <span class="section-title-delimiter clearfix d-none"></span>
+	      </div>
+	      <span class="clearfix"></span>
+	      <div class="fluid-paragraph fluid-paragraph-sm text-center">
+	        <p class="text-lg line-height-1_8 c-gray-light">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magnaUeniad minim veniam, quis nostrud exercitation ullamco laboris.</p>
+	      </div>
+	    </div>
+	  </div>
+	</div>
+</section>
