--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -16,9 +16,9 @@
 
 					        <!-- Profile details -->
 					        <div class="profile-details">
-					            <h2 class="heading heading-4 strong-500 profile-name"><%= @user.first_name %></h2>
-					            <h3 class="heading heading-6 strong-400 profile-occupation mt-3">Founder, Web Developer</h3>
-					            <h3 class="heading heading-light heading-6 strong-400 profile-location">Bucharest, Romania</h3>
+					            <h2 class="heading heading-4 strong-500 profile-name"><%= @user.first_name %> <%= @user.last_name %></h2>
+					            
+					            <h3 class="heading heading-light heading-6 strong-400 profile-location"><%= @user.city %>, <%= @user.country %></h3>
 					        </div>
 
 					        <!-- Profile connect -->
@@ -27,7 +27,7 @@
 					            <a href="#" class="btn btn-styled btn-base-2 btn-circle">Send message</a>
 					        </div>
 
-    </div>
+   						</div>
                                         </div>
                                     </div>
 
@@ -60,15 +60,14 @@
                                                         <!-- General information -->
                                                         <div class="card no-border bg-transparent">
                                                             <div class="card-title px-0 pb-0 no-border">
-                                                                <h3 class="heading heading-6 strong-600">
+                                                                <h2 class="heading heading-5 text-capitalize strong-500 mb-0">
                                                                     Biographie
-                                                                </h3>
+                                                                </h2>
                                                                 <p class="mt-1 mb-0">
-                                                                	Ut ipsi quisque sit amicorum de ut quisque multa supplicare res ipsi iis Quam precari est potius satis faceremus sunt.
-
+                                                                	<%= @user.bio %>
+                                                                		
                                                                 </p>
                                                             </div>
-                                                       
                                                         </div>
 
                                                         <hr class="mt-0 mb-0">
@@ -80,9 +79,7 @@
                                                 <div class="row align-items-center">
                                                     <div class="col-lg-6 col-12">
                                                         <h2 class="heading heading-5 text-capitalize strong-500 mb-0">
-                                                            <a href="#" class="link text-underline--none">
-                                                                <i class="ion-ios-arrow-back"></i> Langues
-                                                            </a>
+                                                        	<i class="ion-ios-arrow-back"></i> Langues
                                                         </h2>
                                                     </div>
                                                 </div>
@@ -90,7 +87,7 @@
 
 
 
-                                            <!-- Notifications -->
+                                            <!-- Languages -->
                                             <div class="row">
                                                 <div class="col-lg-6">
                                                     <div class="card no-border bg-transparent">
@@ -101,12 +98,12 @@
                                                         </div>
                                                         <div class="card-body px-0">
                                                             
-                                                            <div class="checkbox">
+                                                            <div>
                                                             	<ul class="checkbox">
                                                             		<li>Français</li>
                                                             		<li>Anglais</li>
-                                                            	</ul>                                                               
-                                                            </div>                                                          
+                                                            	</ul>
+                                                            </div>                  
                                                         </div>
                                                     </div>
                                                 </div>
@@ -119,25 +116,12 @@
                                                             </h3>
                                                         </div>
                                                         <div class="card-body px-0">
-                                                            <div class="checkbox">
-                                                                <input type="checkbox" name="checkbox_example_2" id="checkboxExample_2a" checked="checked">
-                                                                <label for="checkboxExample_2a">a new device was connected</label>
-                                                            </div>
-                                                            <div class="checkbox">
-                                                                <input type="checkbox" name="checkbox_example_2" id="checkboxExample_2b" checked="checked">
-                                                                <label for="checkboxExample_2b">periodical newsletters are sent</label>
-                                                            </div>
-                                                            <div class="checkbox">
-                                                                <input type="checkbox" name="checkbox_example_2" id="checkboxExample_2c">
-                                                                <label for="checkboxExample_2c">a login attempt is made from another device</label>
-                                                            </div>
-                                                            <div class="checkbox">
-                                                                <input type="checkbox" name="checkbox_example_2" id="checkboxExample_2d">
-                                                                <label for="checkboxExample_2d">a order is ready to be packed and shipped</label>
-                                                            </div>
-                                                            <div class="checkbox">
-                                                                <input type="checkbox" name="checkbox_example_2" id="checkboxExample_2e" checked="checked">
-                                                                <label for="checkboxExample_2e">the package arived at the final destination</label>
+                                                            
+                                                            <div>
+                                                            	<ul class="checkbox">
+                                                            		<li>Français</li>
+                                                            		<li>Anglais</li>
+                                                            	</ul>
                                                             </div>
                                                         </div>
                                                     </div>
@@ -150,113 +134,21 @@
                                                         <div class="card no-border bg-transparent">
                                                             <div class="card-title px-0 pb-0 no-border">
                                                                 <h3 class="heading heading-6 strong-600">
-                                                                    Change password
+                                                                    Centres d'intérêts
                                                                 </h3>
                                                             </div>
                                                             <div class="card-body px-0">
                                                                 <div class="row">
-                                                                    <div class="col-md-6 col-lg-4">
-                                                                        <div class="form-group">
-                                                                            <label class="control-label">Current password</label>
-                                                                            <input type="text" class="form-control form-control-lg">
-                                                                        </div>
+                                                                	<div class="col-md-6 col-lg-4">
+                                                                        <span class="badge badge-lg badge-primary">Music</span>
+                                                                        <span class="badge badge-lg badge-primary">Music</span>
                                                                     </div>
-
-                                                                    <div class="col-md-6 col-lg-4">
-                                                                        <div class="form-group">
-                                                                            <label class="control-label">New password</label>
-                                                                            <input type="text" class="form-control form-control-lg">
-                                                                        </div>
-                                                                    </div>
-
-                                                                    <div class="col-md-6 col-lg-4">
-                                                                        <div class="form-group">
-                                                                            <label class="control-label">Confirm password</label>
-                                                                            <input type="text" class="form-control form-control-lg">
-                                                                        </div>
-                                                                    </div>
-                                                                </div>
-
-                                                                <div class="text-right">
-                                                                    <a href="#" class="btn btn-base-1">Change password</a>
                                                                 </div>
                                                             </div>
                                                         </div>
                                                     </form>
                                                 </div>
                                             </div>
-
-                                            <hr class="mt-0 mb-0">
-
-                                            <!-- Addresses -->
-                                            <div class="py-4">
-                                                <h3 class="heading heading-6 strong-600">My addresses</h3>
-                                            </div>
-
-                                            <div class="row cols-md-space cols-sm-space cols-xs-space">
-                                                <div class="col-lg-6">
-                                                    <div class="card">
-                                                        <div class="px-4 py-4">
-                                                            <p class="c-gray-light">
-                                                                Desiree Jinny
-                                                                <br>
-                                                                1333 Deerfield, State College
-                                                                <br>
-                                                                PA, 16803
-                                                            </p>
-
-                                                            <p class="c-gray-light mt-3">
-                                                                E: desiree@example.com
-                                                                <br>
-                                                                T: 555 965 452
-                                                            </p>
-
-                                                            <span class="clearfix"></span>
-
-                                                            <ul class="inline-links inline-links--style-2">
-                                                                <li class="d-none d-lg-inline-block">
-                                        							<a href="#" class="link link--style-2 strong-600">Edit address</a>
-                                                                </li>
-                                                                <li>
-                                                                    <a href="#" class="link link--style-2 strong-600">Add new</a>
-                                                                </li>
-                                                            </ul>
-                                                        </div>
-                                                    </div>
-                                                </div>
-
-                                                <div class="col-lg-6">
-                                                    <div class="card">
-                                                        <div class="px-4 py-4">
-                                                            <p class="c-gray-light">
-                                                                Desiree Jinny
-                                                                <br>
-                                                                1333 Deerfield, State College
-                                                                <br>
-                                                                PA, 16803
-                                                            </p>
-
-                                                            <p class="c-gray-light mt-3">
-                                                                E: desiree@example.com
-                                                                <br>
-                                                                T: 555 965 452
-                                                            </p>
-
-                                                            <span class="clearfix"></span>
-
-                                                            <ul class="inline-links inline-links--style-2">
-                                                                <li class="d-none d-lg-inline-block">
-                                        							<a href="#" class="link link--style-2 strong-600">Edit address</a>
-                                                                </li>
-                                                                <li>
-                                                                    <a href="#" class="link link--style-2 strong-600">Add new</a>
-                                                                </li>
-                                                            </ul>
-                                                        </div>
-                                                    </div>
-                                                </div>
-                                            </div>
-
                                         </div>
                                     </div>
                                 </div>
