--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -3,14 +3,14 @@
     <div class="row justify-content-center">
       <div class="col-md-8">
         <div class="text-center">
-          <div class="heading heading-2 strong-600 line-height-1_8">Know us better
+          <div class="heading heading-2 strong-600 line-height-1_8">Qui sommes-nous ?
           </div>
           <span class="clearfix"></span>
         	<div class="fluid-paragraph fluid-paragraph-sm">
-            <p>Lorem ipsum dolor sit amet consectetur adipiscing elit curabitur pellentesque neque eget diam posuere porta.</p>
+            <p>La philosophie derrière ce projet fou</p>
           </div>
           <span class="space-xs-md"></span>
-          <a href="#" class="btn btn-styled btn-base-1 btn-circle" data-scroll-to="#sct_timeline">See our history</a>
+          <a href="#" class="btn btn-styled btn-base-1 btn-circle" data-scroll-to="#sct_timeline">Notre Histoire</a>
         </div>
       </div>
     </div>
@@ -23,11 +23,11 @@
       	<span class="timeline-img"></span>
       	<div class="timeline-content">
         	<div class="">
-        		<img src="../../assets/images/prv/work/movie/img-4.jpg" class="img-fluid">
+        		<%= image_tag 'thp.jpg', :class => 'img-fluid'%>
         		<div class="timeline-body">
-    		    	<span class="heading heading-xs text-uppercase strong-300">Oct 15, 2018</span>
-      	      <a href="#" class="heading heading-4 d-block strong-500 mt-1">Beware the mountain</a>
-      	      <p class="mt-3">When we strive to become better than we are, everything around us becomes better, too.</p>
+    		    	<span class="heading heading-xs text-uppercase strong-300">Juillet 2, 2018</span>
+      	      <a href="#" class="heading heading-4 d-block strong-500 mt-1">Session 5</a>
+      	      <p class="mt-3">Apprendre à coder en 3 mois en partant de zéro</p>
          		</div>
         	</div>
       	</div>
@@ -36,11 +36,10 @@
 				<span class="timeline-img"></span>
 			  <div class="timeline-content">
 			    <div class="">
-			      <img src="../../assets/images/prv/work/movie/img-1.jpg" class="img-fluid">
+			      <%= image_tag 'team.jpg', :class => 'img-fluid'%>
 			      <div class="timeline-body">
-		          <span class="heading heading-xs text-uppercase strong-300">Oct 15, 2018</span>
-		          <a href="#" class="heading heading-4 d-block strong-500 mt-1">Beware the mountain</a>
-		          <p class="mt-3">When we strive to become better than we are, everything around us becomes better, too.</p>
+		          <a href="#" class="heading heading-4 d-block strong-500 mt-1">5 personnes</a>
+		          <p class="mt-3">Leona, Romain, Rémi, Sandrine and Christophe</p>
 		        </div>
 	        </div>
 			  </div>
@@ -49,13 +48,13 @@
 			  <span class="timeline-img"></span>
 			  <div class="timeline-content border-0">
 			    <div class="card bg-dark text-white">
-				    <img class="card-img" src="../../assets/images/prv/work/movie/img-2.jpg" alt="Card image">
+				    <%= image_tag 'formation.jpg', :class => 'card-img'%>
 				    <span class="mask mask-dark--style-2"></span>
 				    <div class="card-img-overlay d-flex align-items-center">
 				      <div class="col">
-				        <h4 class="heading heading-inverse heading-3 strong-600">Card title</h4>
-				        <p class="card-text c-gray-lighter">This is a wider card with supporting text below...</p>
-				        <p class="card-text c-gray-lighter">Last updated 3 mins ago</p>
+				        <h4 class="heading heading-inverse heading-3 strong-600">Formation</h4>
+				        <p class="card-text c-gray-lighter">9 semaines</p>
+				        <p class="card-text c-gray-lighter">Pour apprendre à coder en Ruby, Rails, Html, Css and Javascript</p>
 				      </div>
 				    </div>
 					</div>
@@ -64,22 +63,11 @@
 			<div class="timeline-block">
 			  <span class="timeline-img"></span>
 			  <div class="timeline-content">
-			    <div class="timeline-body">
-	          <span class="heading heading-xs text-uppercase strong-300">Oct 15, 2018</span>
-	          <a href="#" class="heading heading-4 d-block strong-500 mt-1">Beware the mountain</a>
-	          <p class="mt-3">When we strive to become better than we are, everything around us becomes better, too.</p>
-	        </div>
-			  </div>
-			</div>
-			<div class="timeline-block">
-			  <span class="timeline-img"></span>
-			  <div class="timeline-content">
 			    <div class="">
-			      <img src="../../assets/images/prv/work/movie/img-3.jpg" class="img-fluid">
+			      <%= image_tag 'idea.jpg', :class => 'img-fluid'%>
 			      <div class="timeline-body">
-		          <span class="heading heading-xs text-uppercase strong-300">Oct 15, 2018</span>
-		          <a href="#" class="heading heading-4 d-block strong-500 mt-1">Beware the mountain</a>
-		          <p class="mt-3">When we strive to become better than we are, everything around us becomes better, too.</p>
+		          <a href="#" class="heading heading-4 d-block strong-500 mt-1">Une idée</a>
+		          <p class="mt-3">Mettre en relation 2 personnes qui pourront apprendre l'une comme l'autre une nouvelle langue</p>
 		        </div>
 	        </div>
 			  </div>
@@ -88,18 +76,28 @@
 	      <span class="timeline-img"></span>
 	      <div class="timeline-content border-0">
 	        <div class="card bg-dark text-white">
-				    <img class="card-img" src="../../assets/images/prv/work/movie/img-4.jpg" alt="Card image">
+				    <%= image_tag 'code.jpg', :class => 'card-img'%>
 					  <span class="mask mask-dark--style-2"></span>
 					  <div class="card-img-overlay d-flex align-items-center">
 					    <div class="col">
-					      <h4 class="heading heading-inverse heading-3 strong-600">Card title</h4>
-					      <p class="card-text c-gray-lighter">This is a wider card with supporting text below...</p>
-					      <p class="card-text c-gray-lighter">Last updated 3 mins ago</p>
+					      <h4 class="heading heading-inverse heading-3 strong-600">Code</h4>
+					      <p class="card-text c-gray-lighter">2 semaines</p>
+					      <p class="card-text c-gray-lighter">Avec l'aide de Bob, notre mentor</p>
 				      </div>
 				    </div>
 					</div>
 	      </div>
 	    </div>
+	    <div class="timeline-block">
+			  <span class="timeline-img"></span>
+			  <div class="timeline-content">
+			    <div class="timeline-body">
+	          <a href="#" class="heading heading-4 d-block strong-500 mt-1">Speak & Up</a>
+	          <span class="heading heading-xs text-uppercase strong-300">Le seul site qui vous permet de trouver près de chez vous une personne avec qui échanger</span>
+	          <p class="mt-3">Dans la langue dont vous avez tant rêvé</p>
+	        </div>
+			  </div>
+			</div>
 	  </div>
   </div>
 </section>
@@ -108,12 +106,12 @@
 	  <div class="row">
 	    <div class="col-md-12">
 	      <div class="section-title section-title--style-1 text-center mb-4">
-	        <h3 class="section-title-inner heading-2 text-normal">The time for action is now!</h3>
+	        <h3 class="section-title-inner heading-2 text-normal">Il est temps de passer à l'action!</h3>
 	        <span class="section-title-delimiter clearfix d-none"></span>
 	      </div>
 	      <span class="clearfix"></span>
 	      <div class="fluid-paragraph fluid-paragraph-sm text-center">
-	        <p class="text-lg line-height-1_8 c-gray-light">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magnaUeniad minim veniam, quis nostrud exercitation ullamco laboris.</p>
+	        <p class="text-lg line-height-1_8 c-gray-light">Apprenez à parler breton avant votre voyage à Belle-île.</p>
 	      </div>
 	    </div>
 	  </div>
