--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,10 +12,11 @@
   </head>
 
   <body>
+    <% if user_signed_in? %>
     <%= render 'layouts/header'%>
+    <% end -%>
     <%= yield %> 
-    <%= debug(params) if Rails.env.development? %>  
-    <%= debug session.to_hash if Rails.env.development?%>
+    
     <%= render 'layouts/footer'%>
    
   </body>
