add abot page into footer

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -9,7 +9,7 @@
                                 <a href="index.html" style="padding-left: 0;">Home</a>
                             </li>
                             <li>
-                                <a href="about-creative.html">About us</a>
+                                <%= link_to 'A Propos', about_path %>
                             </li>
                             <li>
                                 <a href="services-creative.html">Services</a>
