update footer and header

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -6,58 +6,15 @@
                     <div class="text-xs-center text-sm-left">
                         <ul class="footer-menu">
                             <li>
-                                <a href="index.html" style="padding-left: 0;">Home</a>
+                                <%= link_to 'Accueil', root_path %>
                             </li>
                             <li>
-                                <a href="about-creative.html">About us</a>
+                                <%= link_to 'A propos', about_path %>
                             </li>
                             <li>
-                                <a href="services-creative.html">Services</a>
+                                <%= link_to 'Contact', contact_path %>
                             </li>
                         </ul>
-
-                        <div class="copyright mt-1">
-                            <ul class="copy-links">
-                                <li>
-                                    &copy; 2018 Webpixels
-                                </li>
-                                <li>
-                                    <a href="#">Terms</a>
-                                </li>
-                                <li>
-                                    <a href="#">Privacy policy</a>
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-md-5">
-                    <div class="text-xs-center text-sm-right">
-                        <ul class="social-media social-media--style-1-v4">
-                            <li>
-                                <a href="#" class="facebook" target="_blank" data-toggle="tooltip" data-original-title="Facebook">
-                                    <i class="fa fa-facebook"></i>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#" class="instagram" target="_blank" data-toggle="tooltip" data-original-title="Instagram">
-                                    <i class="fa fa-instagram"></i>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#" class="dribbble" target="_blank" data-toggle="tooltip" data-original-title="Dribbble">
-                                    <i class="fa fa-dribbble"></i>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#" class="dribbble" target="_blank" data-toggle="tooltip" data-original-title="Github">
-                                    <i class="fa fa-github"></i>
-                                </a>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
             </div>
         </div>
     </div>
