--- a/app/views/static_pages/_index.html.erb
+++ b/app/views/static_pages/_index.html.erb
@@ -3,12 +3,13 @@
                         <div class="col">
                             <div class="row cols-xs-space align-items-center py-5 text-center text-md-left">
                                 <div class="col-12 col-md-7 col-lg-6">
-                                    <small class="strong-600 text-uppercase ls-2 c-base-1">Read this first</small>
+                                    <small class="strong-600 text-uppercase ls-2 c-base-1">Speak&UP</small>
                                     <h2 class="heading heading-1 strong-400 c-white mt-4">
-                                        Creating the safest car factory in the world
+                                        Speak&UP est une plateforme de rencontre, basée sur l'apprentissage de langues.
                                     </h2>
                                     <p class="lead mt-4 c-white">
-                                        Earlier this year, the United Automobile Workers (UAW) announced it was attempting to organize workers in Tesla’s Fremont factory.
+                                        Ici, nous vous proposons des profils correspondant à vos attentes. <br>
+                                        Il ne vous reste plus qu'à matcher !
                                     </p>
 
                                     <a href="#" class="btn btn-styled btn-sm btn-base-1 btn-circle mt-4">Start reading</a>
