--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -35,9 +35,9 @@
 }
 
 .inscription {
-    position: absolute;
     display: flex;
-    align-content: center;
+    position: absolute;
+    align-items: center;
     top: 50%;
     right: 5%;
     transform: translate(-50%, -50%);
@@ -54,4 +54,6 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: space-around;
+
 }
