modif banner home

--- a/app/views/static_pages/_home.html.erb
+++ b/app/views/static_pages/_home.html.erb
@@ -1,14 +1,14 @@
  <!--    BANNER        -->
-<div>
-    <%= image_tag 'background-2.jpg', :class => 'banner-img'%>
+<div class="image">
+    <%= image_tag 'background-2.jpg', :class => 'banner-img2'%>
     <div class="centered">
         <p class="notice"><%= notice %></p>
         <p class="alert"><%= alert %></p>
-        <h1>
+        <h1 class="heading display-4 strong-400 c-white">
           Rencontrer du monde, échanger, s'améliorer.
         </h1>
 
-        <div class="lead mt-3 mb-3">
+        <div class="lead mt-3 mb-3 c-white">
             Speak&UP
         </div>
     </div>
