--- a/app/views/users/show_follow.html.erb
+++ b/app/views/users/show_follow.html.erb
@@ -43,7 +43,8 @@
 
           <div class="link-menu link-menu--style-3 py-4 border-bottom">
             <%= link_to 'Mon profil', current_user %>
-            <%= link_to 'Following', following_user_path(current_user) %>
+            <%= link_to 'Modifier mon profil', current_user %>
+            <%= link_to 'Following', following_user_path(current_user), :class =>"active" %>
             <%= link_to 'Followers', followers_user_path(current_user) %>
           </div>
 
