--- a/app/views/users/match.html.erb
+++ b/app/views/users/match.html.erb
@@ -32,7 +32,7 @@
               <div class="col-lg-6 col-12">
                 <h2 class="heading heading-6 strong-600 mb-0 text-capitalize strong-500 mb-0">
                     <a href="#" class="link text-underline--none">
-                      <i class="ion-ios-arrow-back"></i> Mon titre Lien  ici a modifier ?????
+                      <i class="ion-ios-arrow-back"></i> Voici tes matchs, commence à échanger dès maintenant
                     </a>
                 </h2>
               </div>
