--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -68,3 +68,10 @@
     justify-content: space-around;
 
 }
+
+#footer{
+    position: static !important;
+    width: 100% !important;
+    margin-top: 10%;
+    bottom: 0 !important;
+}
