created the spoken languages form

--- a/app/views/languages/edit.html.erb
+++ b/app/views/languages/edit.html.erb
@@ -3,6 +3,15 @@
       <%= f.label "Choisissez les langues que vous voulez apprendre" %><br />
       <%= collection_select(:languages, :id, Language.all, :id, :name, {}, { :multiple => true}) %>
     </div>
-  <%= f.submit %>
+  <%= f.submit "Langues en apprentissage"%>
+
+<% end %>
+
+<%= form_for(current_user.spoken_languages.build, url: languages_edit_path) do |f| %>
+    <div class="field">
+      <%= f.label "Choisissez les langues que vous parlez" %><br />
+      <%= collection_select(:languages, :id, Language.all, :id, :name, {}, { :multiple => true}) %>
+    </div>
+  <%= f.submit "Langues parlées"%>
 
 <% end %>
