modified the views to integrate the new form_for

--- a/app/views/languages/edit.html.erb
+++ b/app/views/languages/edit.html.erb
@@ -1,17 +1,11 @@
-<%= form_for(@wanted_languages, url: languages_edit_path) do |f| %>
-  <div><%= hidden_field_tag :user_id, current_user.id %></div>
+<%= form_for(current_user, url: languages_edit_path, method: :create) do |f| %>
   <div class="field">
     <%= f.label "Choisissez les langues que vous voulez apprendre" %><br />
-    <%= collection_select(:languages, :id, Language.all, :id, :name, {}, { :multiple => true}) %>
+    <%= collection_select(:wanted_languages, :id, Language.all, :id, :name, {}, { :multiple => true}) %>
   </div>
-  <%= f.submit "Langues en apprentissage"%>
-<% end %>
-
-<%= form_for(@spoken_languages, url: languages_edit_path) do |f| %>
-  <div><%= hidden_field_tag :user_id, current_user.id %></div>
   <div class="field">
     <%= f.label "Choisissez les langues que vous parlez" %><br />
-    <%= collection_select(:languages, :id, Language.all, :id, :name, {}, { :multiple => true}) %>
+    <%= collection_select(:spoken_languages, :id, Language.all, :id, :name, {}, { :multiple => true}) %>
   </div>
-  <%= f.submit "Langues parlées"%>
+  <%= f.submit "Ajouter les langues" %>
 <% end %>
